--- a/views/ideas/add.handlebars
+++ b/views/ideas/add.handlebars
@@ -14,7 +14,7 @@
 		</div>
 		<div class="form-group">
 			<label for="details">Details</label>
-			<input type="text" class="form-control" name="details">
+			<textarea type="text" class="form-control" name="details" ></textarea>
 		</div>
 		<button type="submit" class="btn btn-primary">Submit</button>
 	</form>
