--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,8 @@
 <!--Partial used here with greater sign-->
 {{> _navbar}}
 <div class="container">
+<!--Flash Message from msg Partial-->
+{{> _msg}}
 <!--tripple handlebars and wrapped body will load the index.handlebars file-->
 {{{body}}}
 </div>
