--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
 	<div class="container">
-		<a class="navbar-brand" href="/">AuthBoiler</a>
+		<a class="navbar-brand" href="/">IdeaAppWithAuth</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -14,14 +14,26 @@
 				</li>
 			</ul>
 			<ul class="navbar-nav ml-auto">
+				<!--The user Global variable here only show ideas if not logged in-->
+				{{#if user}}
 				<li class="nav-item dropdown">
 					<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink">Ideas</a>
 					<div class="dropdown-menu">
 						<a href="/ideas" class="dropdown-item">Ideas</a>
 						<a href="/ideas/add" class="dropdown-item">Add Ideas</a>
-
 					</div>
 				</li>
+					<li class="nav-item">
+						<a href="/users/logout" class="nav-link">Logout</a>
+					</li>
+				{{else}}
+					<li class="nav-item">
+						<a href="/users/login" class="nav-link">Login</a>
+					</li>
+					<li class="nav-item">
+						<a href="/users/register" class="nav-link">Register</a>
+					</li>
+					{{/if}}
 			</ul>
 		</div>
 	</div>
