--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,5 +3,5 @@
 	<p class="lead">Boiler plate for Authenticating applications</p>
 	<!--dont forget to change this route!!! -->
 	<!--IS THIS ROUTE CHANGED??-->
-	<a href="/ideas/add" class="btn btn-dark btn-lg"></a>
+	<a href="/ideas/add" class="btn btn-dark btn-lg">Add Ideas</a>
 </div>
